--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- FONTAWESOME ICONS -->
+    <script src="https://kit.fontawesome.com/bb88356892.js" crossorigin="anonymous"></script>
+    <!--  -->
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
